--- a/css/responsive.css
+++ b/css/responsive.css
@@ -3,7 +3,6 @@
  */
 
 @media (min-width: 1200px) {
-
 }
 
 /** Width between 992px to 1199px
@@ -11,7 +10,6 @@
  */
 
 @media (min-width: 992px) and (max-width: 1199px) {
-  
 }
 
 /** Width between 768px to 991px
@@ -256,6 +254,15 @@
     float: right;
     padding-top: 15px;
     display: block;
+  }
+  /* Header */
+  #header .header-content {
+    margin: 28px;
+    width: 100%;
+    height: 50%;
+  }
+  #header .header-content img {
+    margin-top: 50%;
   }
   /* About */
   .head-info .header-content h1 {
