--- a/css/style.css
+++ b/css/style.css
@@ -461,6 +461,10 @@ nav ul li a {
   max-width: 100%;
 }
 
+.no-margin{
+  margin: unset;
+}
+
 /*-----------------------------------------------------------------------------------*/
 /*  Journal
 /*-----------------------------------------------------------------------------------*/
